objects/QIDC__Job_Statistics_ims__c.object
<CustomObject>
    <description>Stores the job statistics like number of records processed, failed records, from date and to date</description>
    <fields>
        <fullName>QIDC__Additional_Statistics_ims__c</fullName>
        <description>Additional statistics data is stored here which can be used for other reporting.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Statistics</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__From_Date_ims__c</fullName>
        <description>Start date of latest job.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QIDC__Job_Id_ims__c</fullName>
        <description>Stores Job Id.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Job ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Job_Name_ims__c</fullName>
        <description>Stores Job name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Number_Of_Records_Errored_ims__c</fullName>
        <description>Number of records failed in this Job.</description>
        <label># Failed Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QIDC__Number_Of_Records_Processed_ims__c</fullName>
        <description>Number of records processed in this Job</description>
        <label>Records Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QIDC__Status_ims__c</fullName>
        <description>Status of the Job</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__To_Date_ims__c</fullName>
        <description>To&quot; datetime of current job. This will be null if no jobs are running.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>To Date</label>
        <type>DateTime</type>
    </fields>
    <label>Job Statistics</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JS-{0000000}</displayFormat>
        <label>Job_Statistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>